--- a/Assignment-1/style.css
+++ b/Assignment-1/style.css
@@ -8,9 +8,6 @@ font-family: "Poppins", sans-serif; */
   font-family: "Poppins", sans-serif;
 }
 
-body {
-}
-
 /* CREATING NAVBAR */
 /* .navbar {
   background-color: #f1f1f1;
@@ -51,6 +48,11 @@ body {
   padding: 10px;
   text-decoration: none;
   margin-right: 10px;
+}
+
+a:hover {
+  /* text-shadow: 0 12px 20px rgba(213, 133, 240, 1); */
+  color: #ccc;
 }
 
 /* Adjustments for responsiveness */
@@ -112,5 +114,41 @@ img {
 
 /* FOOTER */
 footer {
-  background-color: aqua;
+  background-color: rgb(11, 4, 17);
+  color: #f1f1f1;
+  padding: 10px;
+  margin-top: 36.7%;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.footer-copyright {
+  margin-right: 50px;
+  font-size: 13px;
+}
+
+.footer-social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 40px;
+}
+
+.footer-social-media-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  transition: color 0.3s ease;
+}
+
+.footer-social-media-link:hover {
+  color: #ccc;
 }
