--- a/Assignment-1/style.css
+++ b/Assignment-1/style.css
@@ -69,6 +69,11 @@ a:hover {
     margin-bottom: 5px;
   }
 }
+/* 
+@media(max-width: 768px)
+{
+  ADD YOUR ADJUSTMENT
+} */
 
 /* Styles for the main section */
 main {
@@ -106,6 +111,7 @@ img {
 .talk {
   text-align: justify;
 }
+/* CHANGES IN THE IMAGE */
 .spider-man {
   background-color: #f1f1f1;
   padding: 10px;
