--- a/Assignment-2/style.css
+++ b/Assignment-2/style.css
@@ -60,4 +60,10 @@ body {
   color: #fff;
   font-size: 50px;
   margin-bottom: 26px;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  box-shadow: 0px 12px 12px, rgba(244, 118, 255, 0.8);
+  color: #bababa;
 }
