--- a/Assignment-3/style.css
+++ b/Assignment-3/style.css
@@ -28,17 +28,13 @@ body {
 }
 
 .user-box input {
-}
-
-/* 
-.login-box .user-box input {
   width: 100%;
-  padding: 10px 0;
-  font-size: 16px;
+  padding: 10px 0px;
   color: #fff;
   margin-bottom: 30px;
+  font-size: 18px;
   border: none;
-  border-bottom: 1px solid #fff;
   outline: none;
   background: transparent;
-} */
+  border-bottom: 1px solid #fff;
+}
