--- a/Assignment-4/style.css
+++ b/Assignment-4/style.css
@@ -1,4 +1,19 @@
-h1 {
-  color: blueviolet;
-  background-color: aqua;
+/* Grid is a two dimensinal layout.. */
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 20px;
+  padding: 20px;
+  background-color: rgb(121, 115, 123);
+}
+
+.item {
+  color: black;
+  background-color: #f1f1f1;
+  padding: 10px;
+  box-shadow: 0px 10px 12px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: ro;
 }
