--- a/Assignment-4/style.css
+++ b/Assignment-4/style.css
@@ -26,7 +26,7 @@
 
 /* .item h2 {
   /* IT LOWER THE DISTANCE BETWEEN THE HEADING AND THE PARAGRAPH */
-  margin-bottom: -5px;
+/* margin-bottom: -5px;
 } */
 
 .item p {
