--- a/Assignment-4/style.css
+++ b/Assignment-4/style.css
@@ -4,9 +4,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  gap: 20px;
+  gap: 40px;
   padding: 20px;
-  background-color: rgb(121, 115, 123);
+  background-color: rgb(121, 115, 123, 0.1);
 }
 
 .item {
