--- a/Assignment - 5/style.css
+++ b/Assignment - 5/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Wix Madefor Display", sans-serif;
+}
+
 .navbar-page {
   position: fixed;
   top: 0px;
@@ -26,6 +30,39 @@
 .links a {
   font-size: 18px;
   font-weight: 500;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Footer style */
+.page-footer {
+  position: fixed;
+  /* top: 0px;  IN CASE OF THE FOOTER AND YOU WANT TO FIX ADD TOP = 0PX */
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-color: rgb(18, 14, 21);
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+
+.page-footer p {
+  margin-left: 90px;
+  font-size: 12px;
+  color: #fff;
+}
+.footer-links {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  list-style: none;
+}
+
+.footer-links a {
+  font-size: 14px;
   color: #fff;
   text-decoration: none;
 }
