--- a/Assignment - 5/style.css
+++ b/Assignment - 5/style.css
@@ -44,13 +44,14 @@
   background-color: rgb(18, 14, 21);
 
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   padding: 10px;
 }
 
 .page-footer p {
-  margin-left: 90px;
+  margin-left: 0px;
   font-size: 12px;
   color: #fff;
 }
@@ -65,4 +66,8 @@
   font-size: 14px;
   color: #fff;
   text-decoration: none;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
 }
