--- a/Assignment - 6/style.css
+++ b/Assignment - 6/style.css
@@ -1,38 +1,17 @@
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
-body {
-}
-
-.logo {
-  margin-left: 30px;
-}
-
-.nav-links {
+.navbar {
+  width: 100%;
+  height: 50px;
   display: flex;
+  justify-content: space-between;
 }
 
-.nav-liks-left {
+.nav-links-left {
   display: flex;
-  gap: 30px;
-  margin-right: 435px;
-  list-style: none;
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.nav-liks-left a {
-  color: black;
-  text-decoration: none;
-}
-
-.nav-media-link-more {
-  color: rgb(255, 72, 0);
-}
-
-.nav-links-right {
-  display: flex;
-  gap: 30px;
+  gap: 20px;
+  list-style-type: none;
 }
